includes/css/popup.css
html,
body {
	height: 100%;
	text-align: center;
	margin: auto;
	width : 500px;
}

.box-shadow{
	box-shadow: 0 .1rem .75rem rgba(0, 0, 0, .05);
}

.info-card{
	margin-top: 5px;
}

